# agents-demo

./: .envrc.sample  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  config.py
sample/: gemini_agent.py  google_agent.py  gpt_agent.py  main.py  ollama_agent.py
smart_runner/: browser_agent.py  main.py
smart_runner/a_agents/: main.py
smart_runner/agents/: google_agent.py  main.py
smart_runner/b_agents/: main.py  ollama_agent.py
smart_runner/config/: __init__.py  logging.py
smart_runner/ui/: browser_agent.py  main.py
stylist/: agent.py  main.py
task_based_agent/: agent.py  google_agent.py  gpt_agent.py  main.py  ollama_agent.py
viberobeai/: main.py  team.py
